--- a/MSTestMoodAnalyser/MSTestMoodAnalyser.csproj
+++ b/MSTestMoodAnalyser/MSTestMoodAnalyser.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MoodAnalyserProblem\MoodAnalyserProblem.csproj">
+      <Project>{59186ee6-a6c7-4e82-bff5-f4939af67df3}</Project>
+      <Name>MoodAnalyserProblem</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
